<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/gray90"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_status"
            tools:text="1-Day Pass"/>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/gray70"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintBottom_toTopOf="@id/view_divider"
            tools:text="Activated"/>

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_status" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <TextView
            android:id="@+id/text_insertion_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/insertion_date"
            android:textColor="@color/gray90"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/view_divider"
            app:layout_constraintBottom_toTopOf="@id/text_activation_date_title"/>

        <TextView
            android:id="@+id/text_activation_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/activation_date"
            android:textColor="@color/gray90"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_insertion_date_title"
            app:layout_constraintBottom_toTopOf="@id/text_expiration_date_title"/>

        <TextView
            android:id="@+id/text_expiration_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/expiration_date"
            android:textColor="@color/gray90"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_activation_date_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_insertion_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/gray70"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/view_divider"
            app:layout_constraintBottom_toTopOf="@id/text_activation_date"
            tools:text="2021/06/25 06:57:12"/>

        <TextView
            android:id="@+id/text_activation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/activation_date"
            android:textColor="@color/gray70"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_insertion_date"
            app:layout_constraintBottom_toTopOf="@id/text_expiration_date"
            tools:text="2021/06/25 06:57:12"/>

        <TextView
            android:id="@+id/text_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:text="@string/expiration_date"
            android:textColor="@color/gray70"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_activation_date"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="2021/06/25 06:57:12"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>